
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="1200dp"
        >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/teamNumberEditText"
            android:width="100dp"
            android:maxLength="4"
            android:layout_alignParentTop="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/matchNumberEditText"
            android:width="100dp"
            android:maxLength="3"
            android:layout_below="@+id/teamNumberEditText"
            android:layout_alignStart="@+id/teamNumberEditText" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/scoutNameEditText"
            android:width="250dp"
            android:layout_below="@+id/matchNumberEditText"
            android:maxLength="18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/team_number_string"
            android:id="@+id/textView"
            android:layout_alignBottom="@+id/teamNumberEditText"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/match_number_string"
            android:id="@+id/textView2"
            android:layout_above="@+id/scoutNameEditText"
            android:layout_alignEnd="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/scout_name_string"
            android:id="@+id/textView3"
            android:layout_alignBottom="@+id/scoutNameEditText"
            android:layout_alignEnd="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/number_of_cylinders_moved_string"
            android:id="@+id/textView4"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/scoutNameEditText"
            android:layout_alignEnd="@+id/matchNumberEditText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/number_of_totes_moved_string"
            android:id="@+id/textView5"
            android:layout_alignTop="@+id/textView4"
            android:layout_alignStart="@+id/numberOfTotesMovedNumberPicker" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numberOfTotesMovedNumberPicker"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/number_of_cylinders_ofStep_variable"
            android:id="@+id/textView8"
            android:layout_alignTop="@+id/textView5"
            android:layout_alignStart="@+id/numberOffStepNumberPicker" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toteSetToggleButton"
            android:layout_marginTop="56dp"
            android:layout_below="@+id/cylindersMovedNumberPicker"
            android:layout_alignStart="@+id/cylindersMovedNumberPicker" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tote_set_string"
            android:id="@+id/textView9"
            android:layout_alignTop="@+id/textView10"
            android:layout_alignEnd="@+id/cylindersMovedNumberPicker" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/botZoneToggleButton"
            android:layout_alignTop="@+id/toteSetToggleButton"
            android:layout_alignStart="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/bot_in_zone_string"
            android:id="@+id/textView10"
            android:layout_above="@+id/botZoneToggleButton"
            android:layout_alignStart="@+id/botZoneToggleButton" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/long_string"
            android:id="@+id/longCheckBox"
            android:layout_above="@+id/totesFromLandfillEditText"
            android:layout_toEndOf="@+id/totesFromLandfillEditText" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wide_String"
            android:id="@+id/wideCheckBox"
            android:layout_below="@+id/longCheckBox"
            android:layout_alignStart="@+id/longCheckBox" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/totesFromLandfillEditText"
            android:layout_marginTop="68dp"
            android:maxLength="2"
            android:layout_below="@+id/toteSetToggleButton"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/textView11" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/totes_landfill_string"
            android:id="@+id/textView11"
            android:layout_alignBottom="@+id/totesFromLandfillEditText"
            android:layout_alignStart="@+id/numberOfTotesMovedNumberPicker" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/upsideDownTotesEditText"
            android:layout_below="@+id/textView11"
            android:layout_alignEnd="@+id/totesFromLandfillEditText"
            android:maxLength="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/upside_down_totes_string"
            android:id="@+id/textView12"
            android:layout_alignBottom="@+id/upsideDownTotesEditText"
            android:layout_alignStart="@+id/textView11" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cylindersMovedNumberPicker"
            android:layout_alignTop="@+id/numberOfTotesMovedNumberPicker"
            android:layout_alignEnd="@+id/textView4" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numberOffStepNumberPicker"
            android:layout_below="@+id/textView8"
            android:layout_alignEnd="@+id/textView10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/totes_off_set_string"
            android:id="@+id/textView6"
            android:layout_marginTop="38dp"
            android:layout_below="@+id/textView12"
            android:layout_alignStart="@+id/toteSetToggleButton" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totesOffStepNP"
            android:layout_below="@+id/textView6"
            android:layout_alignStart="@+id/textView6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/noodles_in_cylinder_string"
            android:id="@+id/textView7"
            android:layout_alignTop="@+id/textView6"
            android:layout_centerHorizontal="true" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/noodlesCylinderNP"
            android:layout_alignTop="@+id/totesOffStepNP"
            android:layout_alignStart="@+id/textView12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/noodles_in_opponent_zone_string"
            android:id="@+id/textView13"
            android:layout_alignBottom="@+id/textView7"
            android:layout_alignParentEnd="true" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/noodlesInOpponentNP"
            android:layout_below="@+id/textView13"
            android:layout_alignStart="@+id/textView13" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/herd_litter_string"
            android:id="@+id/herdLitterOptionSwitch"
            android:layout_below="@+id/totesOffStepNP"
            android:layout_alignStart="@+id/totesOffStepNP"
            android:layout_marginTop="51dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/totesHPEditText"
            android:layout_below="@+id/herdLitterOptionSwitch"
            android:layout_alignStart="@+id/herdLitterOptionSwitch"
            android:layout_marginTop="40dp"
            android:width="120dp"
            android:maxLength="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/totes_from_hp_string"
            android:id="@+id/textView15"
            android:layout_above="@+id/numberOverPlatformEditText"
            android:layout_alignEnd="@+id/textView11" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/numberOverPlatformEditText"
            android:maxLength="2"
            android:width="120dp"
            android:layout_below="@+id/totesHPEditText"
            android:layout_alignStart="@+id/totesHPEditText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/number_over_platform_string"
            android:id="@+id/textView16"
            android:layout_above="@+id/ratingBar"
            android:layout_alignEnd="@+id/botZoneToggleButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button_string"
            android:id="@+id/submitButton"
            android:width="200dp"
            android:layout_below="@+id/ratingBar"
            android:layout_alignEnd="@+id/textView12" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/numberOverPlatformEditText"
            android:layout_centerHorizontal="true"
            android:longClickable="false"
            android:numStars="5" />

    </RelativeLayout>
</ScrollView>